--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           type="submit"
           style="background-color: #e53935; border: 2px solid orange; color: #fff; border-radius: 0.5rem; padding: 0.5rem 1rem; font-size: 1rem; cursor: pointer;"
         >
-          Submit
+          RSVP for Party
         </button>
       </form>
 
